# pinyin-php

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  clean  config.m4  config.w32  funs.c  hashtable.c  makefile  php_pinyin.h  pinyin.c  pinyin.inc  pinyin.php  py_hashtable.c  py_pinyin.c  py_pinyin.h  test.cmd  test_pinyin.c
console/: CMakeLists.txt  makefile  pinyin_console.c
data/: README.md  build.cmd  cchars.sql  chars.csv  databuild.php  dbbuild.cmd  dbbuild.php  file.inc  getData.sh  pinyin.sql  utf8汉字编码对照表.txt  webbuild.cmd  webbuild.php  words.csv
pinyin/: CMakeLists.txt  Makefile  hashtable.c  hashtable.h  pinyin.c  pinyin.h  test.c  test.h
src/: hashtable.c  hashtable.h  pinyin.c  pinyin.inc  py_hashtable.c  py_hashtable.h  py_pinyin.c  py_pinyin.h  test_pinyin.c
